[gd_scene load_steps=6 format=2]

[ext_resource path="res://Beacon/Beacon.gd" type="Script" id=1]

[sub_resource type="CylinderShape" id=1]
height = 5.0
radius = 2.5

[sub_resource type="SpatialMaterial" id=2]
flags_transparent = true
params_grow = true
params_grow_amount = 1.0
albedo_color = Color( 1, 0.937255, 0.713726, 0.392157 )
emission_enabled = true
emission = Color( 0.803922, 0.682353, 0.133333, 1 )
emission_energy = 2.5
emission_operator = 0
emission_on_uv2 = false

[sub_resource type="CylinderMesh" id=3]
top_radius = 5.0
bottom_radius = 5.0
height = 60.0

[sub_resource type="SpatialMaterial" id=4]
flags_transparent = true
emission_enabled = true
emission = Color( 1, 0.909804, 0.45098, 1 )
emission_energy = 2.67
emission_operator = 0
emission_on_uv2 = false

[node name="Beacon" type="Area"]
collision_layer = 0
collision_mask = 2
script = ExtResource( 1 )

[node name="CollisionShape" type="CollisionShape" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 2.5, 0 )
shape = SubResource( 1 )

[node name="CSGCylinder" type="CSGCylinder" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 25, 0 )
radius = 5.0
height = 60.0
sides = 32
material = SubResource( 2 )

[node name="Timer" type="Timer" parent="."]
wait_time = 4.0
one_shot = true

[node name="MeshInstance" type="MeshInstance" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 24.0244, 0 )
visible = false
mesh = SubResource( 3 )
material/0 = SubResource( 4 )

[node name="HideTimer" type="Timer" parent="."]
wait_time = 4.0
one_shot = true

[connection signal="body_entered" from="." to="." method="_on_Spatial_body_entered"]
[connection signal="body_exited" from="." to="." method="_on_Spatial_body_exited"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
[connection signal="timeout" from="HideTimer" to="." method="_on_HideTimer_timeout"]
